<resources>
    <string name="app_name">RealTipCalculator</string>
    <string name="total_bill">Total Bill</string>
    <string name="calculate">Calculate</string>
    <string name="real_tip">Real Tip</string>
    <string name="round_up">Round Up</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="custom">Custom</string>
    <string name="zeroPercent">0%</string>
    <string name="total_bill_with_tip">Total Bill with Tip:</string>
    <string name="final_tip"> Tip amount: %s </string>
</resources>